--- a/ios/Podfile
+++ b/ios/Podfile
@@ -54,6 +54,8 @@ target 'profileapps' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+
   target 'profileappsTests' do
     inherit! :complete
     # Pods for testing
