--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.33.1
+
+MYAPP_UPLOAD_STORE_FILE=survey-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=survey-alias
+MYAPP_UPLOAD_STORE_PASSWORD=2Z3TOM4s-
+MYAPP_UPLOAD_KEY_PASSWORD=2Z3TOM4s
